--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.8.1",
     "socket.io": "^4.5.4",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
     "@types/socket.io": "^3.0.2",
     "ts-node-dev": "^2.0.0"
   }
