--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.8.1",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^4.5.4",
+    "tsyringe": "^4.7.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
